latecny metric data endpoint
